<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_common">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/splash_logo"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_login_logo" />

        <com.yin.driver.view.AppTextView_Title
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:gravity="bottom"
            android:padding="5dp"
            android:text="@string/ladies_only"
            android:textAllCaps="false"
            android:textAppearance="@style/LargeText"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/activity_terms_and_condition_tC_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_gutter_margin_triple"
                android:layout_marginBottom="@dimen/activity_gutter_margin"
                android:buttonTint="@color/white"
                android:gravity="center"
                android:text="@string/accept_terms_and_condition"
                android:textColor="@color/white" />

            <com.yin.driver.view.AppTextView
                android:id="@+id/activity_terms_and_condition_enter_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/activity_gutter_margin_triple"
                android:layout_marginRight="@dimen/activity_gutter_margin_triple"
                android:layout_marginBottom="@dimen/activity_gutter_margin_triple"
                android:background="@drawable/bg_button_color_accent_border"
                android:gravity="center"
                android:padding="@dimen/activity_gutter_margin_half"
                android:text="@string/enter"
                android:textAllCaps="false"
                android:textAppearance="@style/LargeText"
                android:textColor="@color/white"
                android:textStyle="normal" />
        </LinearLayout>

        <com.yin.driver.view.AppTextView
            android:id="@+id/activity_home_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_gutter_margin_double"
            android:layout_marginTop="-10dp"
            android:layout_marginRight="@dimen/activity_gutter_margin_double"
            android:background="@drawable/profile_btn_bg"
            android:gravity="center"
            android:paddingBottom="@dimen/activity_gutter_margin_half"
            android:text="@string/home"
            android:textAllCaps="false"
            android:textAppearance="@style/LargeText"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:visibility="gone" />

    </LinearLayout>


</RelativeLayout>