<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_screen_bg">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/splash_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_margin_top"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_login_logo" />

            <LinearLayout
                android:id="@+id/detailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/splash_logo"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/activity_margin_left"
                android:layout_marginTop="@dimen/activity_margin_top"
                android:layout_marginRight="@dimen/activity_margin_right"
                android:background="@drawable/bg_light_white"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/top_login_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_circle_gray" />

                    <com.yin.driver.view.AppTextView_Title
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/changePassword"
                        android:textAllCaps="false"
                        android:textAppearance="@style/LargeText"
                        android:textColor="@color/app_primary"
                        android:textStyle="normal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/transparent"
                    android:orientation="vertical">


                    <com.yin.driver.view.AppEditTextView
                        android:id="@+id/change_password_activity_old_password_etv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="8dp"
                        android:background="@drawable/bg_white_field"
                        android:gravity="center"
                        android:hint="@string/your_old_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textAppearance="@style/MediumText"
                        android:textColor="@color/app_primary"
                        android:textColorHint="@color/app_primary"
                        android:textStyle="normal" />

                    <com.yin.driver.view.AppEditTextView
                        android:id="@+id/change_password_activity_new_password_etv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="8dp"
                        android:background="@drawable/bg_white_field"
                        android:gravity="center"
                        android:hint="@string/your_new_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textAppearance="@style/MediumText"
                        android:textColor="@color/app_primary"
                        android:textColorHint="@color/app_primary"
                        android:textStyle="normal" />

                    <com.yin.driver.view.AppEditTextView
                        android:id="@+id/change_password_activity_confirm_new_password_etv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="8dp"
                        android:background="@drawable/bg_white_field"
                        android:gravity="center"
                        android:hint="@string/confirm_your_new_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textAppearance="@style/MediumText"
                        android:textColor="@color/app_primary"
                        android:textColorHint="@color/app_primary"
                        android:textStyle="normal" />


                    <com.yin.driver.view.AppButton
                        android:id="@+id/change_password_activity_update_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/btn_bg_deep_gray"
                        android:text="@string/change"
                        android:textAllCaps="true"
                        android:textAppearance="@style/MediumText"
                        android:textColor="@color/white"
                        android:textStyle="normal" />

                    <com.yin.driver.view.AppTextView_Title
                        android:id="@+id/register_activity_login_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="@string/back_to_login"
                        android:textAllCaps="false"
                        android:textAppearance="@style/LargeText"
                        android:textColor="@color/app_primary"
                        android:textSize="@dimen/heading_normal_text_size"
                        android:textStyle="normal"
                        android:visibility="gone" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/activity_gutter_margin_double"
                        android:background="@color/app_primary" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:layout_margin="@dimen/activity_gutter_margin"
                        android:src="@drawable/ic_login_cancel"
                        android:visibility="visible" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/progressBarLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/transparent"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:progressTint="@color/ColorAccent" />

        <com.yin.app.yinuser.view.AppTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/logingin"
            android:textAppearance="@style/LargeText"
            android:textColor="@color/ColorAccent" />
    </LinearLayout>

</RelativeLayout>